// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PhotoCarousel renders correctly 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "height": 54,
        "paddingBottom": 6,
        "paddingLeft": 3,
        "paddingRight": 3,
        "paddingTop": 6,
      },
    ]
  }
>
  <RCTScrollView
    data={
      [
        "https://loremflickr.com/640/480",
        "https://loremflickr.com/640/480",
        "https://loremflickr.com/640/480",
      ]
    }
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={true}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={[]}
    viewabilityConfigCallbackPairs={[]}
  >
    <View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={
          [
            {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          animatedStyle={
            {
              "value": {
                "transform": [
                  {
                    "rotateZ": 0,
                  },
                ],
              },
            }
          }
          collapsable={false}
          style={
            {
              "transform": [
                {
                  "rotateZ": 0,
                },
              ],
            }
          }
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                [
                  {
                    "justifyContent": "center",
                  },
                  {
                    "alignItems": "center",
                  },
                ],
              ]
            }
          >
            <View
              style={
                [
                  [
                    {
                      "overflow": "hidden",
                    },
                    {
                      "borderBottomLeftRadius": 4,
                      "borderBottomRightRadius": 4,
                      "borderTopLeftRadius": 4,
                      "borderTopRightRadius": 4,
                    },
                  ],
                ]
              }
              testID="PhotoCarousel.photo"
            >
              <View
                accessibilityIgnoresInvertColors={true}
                style={
                  [
                    [
                      {
                        "height": "100%",
                      },
                      {
                        "display": "flex",
                      },
                      {
                        "justifyContent": "center",
                      },
                      {
                        "alignItems": "center",
                      },
                    ],
                  ]
                }
              >
                <Image
                  source={
                    {
                      "uri": "https://loremflickr.com/640/480",
                    }
                  }
                  style={
                    [
                      {
                        "bottom": 0,
                        "left": 0,
                        "position": "absolute",
                        "right": 0,
                        "top": 0,
                      },
                      {
                        "height": "100%",
                        "width": undefined,
                      },
                      undefined,
                    ]
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={
          [
            {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          animatedStyle={
            {
              "value": {
                "transform": [
                  {
                    "rotateZ": 0,
                  },
                ],
              },
            }
          }
          collapsable={false}
          style={
            {
              "transform": [
                {
                  "rotateZ": 0,
                },
              ],
            }
          }
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                [
                  {
                    "justifyContent": "center",
                  },
                  {
                    "alignItems": "center",
                  },
                ],
              ]
            }
          >
            <View
              style={
                [
                  [
                    {
                      "overflow": "hidden",
                    },
                    {
                      "borderBottomLeftRadius": 4,
                      "borderBottomRightRadius": 4,
                      "borderTopLeftRadius": 4,
                      "borderTopRightRadius": 4,
                    },
                  ],
                ]
              }
              testID="PhotoCarousel.photo"
            >
              <View
                accessibilityIgnoresInvertColors={true}
                style={
                  [
                    [
                      {
                        "height": "100%",
                      },
                      {
                        "display": "flex",
                      },
                      {
                        "justifyContent": "center",
                      },
                      {
                        "alignItems": "center",
                      },
                    ],
                  ]
                }
              >
                <Image
                  source={
                    {
                      "uri": "https://loremflickr.com/640/480",
                    }
                  }
                  style={
                    [
                      {
                        "bottom": 0,
                        "left": 0,
                        "position": "absolute",
                        "right": 0,
                        "top": 0,
                      },
                      {
                        "height": "100%",
                        "width": undefined,
                      },
                      undefined,
                    ]
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={
          [
            {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          animatedStyle={
            {
              "value": {
                "transform": [
                  {
                    "rotateZ": 0,
                  },
                ],
              },
            }
          }
          collapsable={false}
          style={
            {
              "transform": [
                {
                  "rotateZ": 0,
                },
              ],
            }
          }
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                [
                  {
                    "justifyContent": "center",
                  },
                  {
                    "alignItems": "center",
                  },
                ],
              ]
            }
          >
            <View
              style={
                [
                  [
                    {
                      "overflow": "hidden",
                    },
                    {
                      "borderBottomLeftRadius": 4,
                      "borderBottomRightRadius": 4,
                      "borderTopLeftRadius": 4,
                      "borderTopRightRadius": 4,
                    },
                  ],
                ]
              }
              testID="PhotoCarousel.photo"
            >
              <View
                accessibilityIgnoresInvertColors={true}
                style={
                  [
                    [
                      {
                        "height": "100%",
                      },
                      {
                        "display": "flex",
                      },
                      {
                        "justifyContent": "center",
                      },
                      {
                        "alignItems": "center",
                      },
                    ],
                  ]
                }
              >
                <Image
                  source={
                    {
                      "uri": "https://loremflickr.com/640/480",
                    }
                  }
                  style={
                    [
                      {
                        "bottom": 0,
                        "left": 0,
                        "position": "absolute",
                        "right": 0,
                        "top": 0,
                      },
                      {
                        "height": "100%",
                        "width": undefined,
                      },
                      undefined,
                    ]
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`PhotoCarousel renders correctly for large screen 1`] = `
<View
  onLayout={[Function]}
  style={
    [
      {
        "height": 117,
        "paddingBottom": 17,
        "paddingLeft": 8.5,
        "paddingRight": 8.5,
        "paddingTop": 17,
      },
    ]
  }
>
  <RCTScrollView
    data={
      [
        "https://loremflickr.com/640/480",
        "https://loremflickr.com/640/480",
        "https://loremflickr.com/640/480",
      ]
    }
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={true}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={[]}
    viewabilityConfigCallbackPairs={[]}
  >
    <View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={
          [
            {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          animatedStyle={
            {
              "value": {
                "transform": [
                  {
                    "rotateZ": 0,
                  },
                ],
              },
            }
          }
          collapsable={false}
          style={
            {
              "transform": [
                {
                  "rotateZ": 0,
                },
              ],
            }
          }
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                [
                  {
                    "justifyContent": "center",
                  },
                  {
                    "alignItems": "center",
                  },
                ],
              ]
            }
          >
            <View
              style={
                [
                  [
                    {
                      "overflow": "hidden",
                    },
                    {
                      "borderBottomLeftRadius": 9,
                      "borderBottomRightRadius": 9,
                      "borderTopLeftRadius": 9,
                      "borderTopRightRadius": 9,
                    },
                  ],
                ]
              }
              testID="PhotoCarousel.photo"
            >
              <View
                accessibilityIgnoresInvertColors={true}
                style={
                  [
                    [
                      {
                        "height": "100%",
                      },
                      {
                        "display": "flex",
                      },
                      {
                        "justifyContent": "center",
                      },
                      {
                        "alignItems": "center",
                      },
                    ],
                  ]
                }
              >
                <Image
                  source={
                    {
                      "uri": "https://loremflickr.com/640/480",
                    }
                  }
                  style={
                    [
                      {
                        "bottom": 0,
                        "left": 0,
                        "position": "absolute",
                        "right": 0,
                        "top": 0,
                      },
                      {
                        "height": "100%",
                        "width": undefined,
                      },
                      undefined,
                    ]
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={
          [
            {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          animatedStyle={
            {
              "value": {
                "transform": [
                  {
                    "rotateZ": 0,
                  },
                ],
              },
            }
          }
          collapsable={false}
          style={
            {
              "transform": [
                {
                  "rotateZ": 0,
                },
              ],
            }
          }
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                [
                  {
                    "justifyContent": "center",
                  },
                  {
                    "alignItems": "center",
                  },
                ],
              ]
            }
          >
            <View
              style={
                [
                  [
                    {
                      "overflow": "hidden",
                    },
                    {
                      "borderBottomLeftRadius": 9,
                      "borderBottomRightRadius": 9,
                      "borderTopLeftRadius": 9,
                      "borderTopRightRadius": 9,
                    },
                  ],
                ]
              }
              testID="PhotoCarousel.photo"
            >
              <View
                accessibilityIgnoresInvertColors={true}
                style={
                  [
                    [
                      {
                        "height": "100%",
                      },
                      {
                        "display": "flex",
                      },
                      {
                        "justifyContent": "center",
                      },
                      {
                        "alignItems": "center",
                      },
                    ],
                  ]
                }
              >
                <Image
                  source={
                    {
                      "uri": "https://loremflickr.com/640/480",
                    }
                  }
                  style={
                    [
                      {
                        "bottom": 0,
                        "left": 0,
                        "position": "absolute",
                        "right": 0,
                        "top": 0,
                      },
                      {
                        "height": "100%",
                        "width": undefined,
                      },
                      undefined,
                    ]
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={
          [
            {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          animatedStyle={
            {
              "value": {
                "transform": [
                  {
                    "rotateZ": 0,
                  },
                ],
              },
            }
          }
          collapsable={false}
          style={
            {
              "transform": [
                {
                  "rotateZ": 0,
                },
              ],
            }
          }
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                [
                  {
                    "justifyContent": "center",
                  },
                  {
                    "alignItems": "center",
                  },
                ],
              ]
            }
          >
            <View
              style={
                [
                  [
                    {
                      "overflow": "hidden",
                    },
                    {
                      "borderBottomLeftRadius": 9,
                      "borderBottomRightRadius": 9,
                      "borderTopLeftRadius": 9,
                      "borderTopRightRadius": 9,
                    },
                  ],
                ]
              }
              testID="PhotoCarousel.photo"
            >
              <View
                accessibilityIgnoresInvertColors={true}
                style={
                  [
                    [
                      {
                        "height": "100%",
                      },
                      {
                        "display": "flex",
                      },
                      {
                        "justifyContent": "center",
                      },
                      {
                        "alignItems": "center",
                      },
                    ],
                  ]
                }
              >
                <Image
                  source={
                    {
                      "uri": "https://loremflickr.com/640/480",
                    }
                  }
                  style={
                    [
                      {
                        "bottom": 0,
                        "left": 0,
                        "position": "absolute",
                        "right": 0,
                        "top": 0,
                      },
                      {
                        "height": "100%",
                        "width": undefined,
                      },
                      undefined,
                    ]
                  }
                />
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
